Upgrading from Meteor 0.8 to 1.0.4.2

--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -6,7 +6,7 @@
 			<div class="container darkBlueBG">  	
 
 		    	<div class="innerContainer">
-				    {{> yield}}
+				    <!-- {{> yield}} -->
 				</div>
 				    {{>footer}}
 			</div>
