Deleting /packages root folder, smart.json, and smart.lock; fixing packages to work with current meteor syntax; removed bootstrap and less packages

--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -1,17 +1,13 @@
 <template name="layout">
-	<!-- <div class="container"> -->
 		{{>header}}
 	
 	    <div id="main" class="row-fluid">
 			<div class="container darkBlueBG">  	
 
 		    	<div class="innerContainer">
-				    <!-- {{> yield}} -->
+				    {{> yield}}
 				</div>
 				    {{>footer}}
 			</div>
 	    </div>
-	    
-	    
-	<!-- </div> -->
 </template>
