Restyling ipsum submit template to work with Pure CSS framework; misc cleanup of misc files

--- a/client/views/ipsums/ipsums_list.html
+++ b/client/views/ipsums/ipsums_list.html
@@ -1,5 +1,5 @@
 <template name="ipsumsList">
-	<div class="ipsums whiteGreyBG">
+	<div class="ipsums">
 	    {{#each mostRecentIpsums}}
 	        {{> ipsumItem }}
 		{{/each}}
