Adding link to root on footer; changing name of root route

--- a/client/views/includes/footer.html
+++ b/client/views/includes/footer.html
@@ -2,7 +2,7 @@
 	<footer class="darkBlueBG">
       <!-- <div class="innerSection"> -->
         <p>
-          Yourem Ipsum created by <a href="http://www.twitter.com/gavinthompson">Gavin Thompson</a> - 2014
+          <a href="{{pathFor 'root'}}">Yourem Ipsum</a> created by <a href="http://www.twitter.com/gavinthompson">Gavin Thompson</a> - 2014
         </p>
       <!-- </div> -->
   	</footer>
