Fixing text fields -- derrrrrrrrp

--- a/client/views/ipsums/ipsum_submit.html
+++ b/client/views/ipsums/ipsum_submit.html
@@ -19,12 +19,12 @@
 
                              <div class="pure-control-group">
                                 <label for="paragraphs">Title:</label>
-                                <input type="number" class="pure-input-1-2" id="ipsumTitle" name="title" placeholder="Name your ipsum">
+                                <input type="text" class="pure-input-1-2" id="ipsumTitle" name="title" placeholder="Name your ipsum">
                             </div>
 
                             <div class="pure-control-group">
                                 <label for="paragraphs">Author:</label>
-                                <input type="number" class="pure-input-1-2" id="ipsumAuthor" name="author" placeholder="Your name">
+                                <input type="text" class="pure-input-1-2" id="ipsumAuthor" name="author" placeholder="Your name">
                             </div>
 
                              <div class="pure-control-group">
