removing about button; adding link to home/root path on title

--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -4,7 +4,9 @@
 		<div class="sidebar pure-u-1 pure-u-md-1-4">
 			<div class="header">
 				
-				<h1 class="brand-title">Yourem Ipsum</h1>
+				<a class="brand-title" href="{{pathFor 'root'}}">
+					<h1>Yourem Ipsum</h1>
+				</a>
 
 				<h2 class="brand-tagline">Your personal ipsum generator.</h2>
 
@@ -12,9 +14,6 @@
 					<ul class="nav-list">
 						<li class="nav-item">
 							<a class="pure-button" href="{{pathFor 'ipsumSubmit'}}">Create New Ipsum</a>
-						</li>
-						<li class="nav-item">
-							<a class="pure-button" href="#">Why?</a>
 						</li>
 					</ul>
 				</nav>
