--- a/client/views/application/layout.css
+++ b/client/views/application/layout.css
@@ -49,6 +49,9 @@ h3 {
     font-weight: 300;
     color: rgb(176, 202, 219);
 }
+.brand-title:hover{
+    text-decoration: none;
+}
 
 .nav-list {
     margin: 0;
